--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -23,6 +23,7 @@
 @use 'header/src/scss/component' as header;
 @use 'lists/src/scss/component' as lists;
 @use 'main-menu/src/scss/component' as main-menu;
+@use 'main-navigation/src/scss/component' as main-navigation;
 @use 'pane/src/scss/component' as pane;
 @use 'sections/src/scss/component' as sections;
 @use 'tabs/src/scss/component' as tabs;
