--- a/packages/storybook-html/src/components/main-navigation/main-navigation.html
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.html
@@ -19,7 +19,7 @@
 </div>
 
 <!-- Navigation Menu  -->
-
+<div class="main-navigation section section--no-spacing">
 
     <div
       id="block-mainnavigation"
@@ -345,3 +345,4 @@
         </div>
       </div>
     </div>
+  </div>
