icon: add expand-3 and shrink-2 Streamline icon

--- a/packages/icon/src/css/style.css
+++ b/packages/icon/src/css/style.css
@@ -245,6 +245,7 @@
 @mixin icon standard, conversation-chat-text;
 @mixin icon standard, dual-program;
 @mixin icon standard, email-action-unread;
+@mixin icon standard, expand-3;
 @mixin icon standard, information-circle;
 @mixin icon standard, navigation-menu;
 @mixin icon standard, network-information;
@@ -256,6 +257,7 @@
 @mixin icon standard, school-teacher-correct;
 @mixin icon standard, search;
 @mixin icon standard, settings-slider;
+@mixin icon standard, shrink-2;
 @mixin icon standard, subtract;
 @mixin icon student-services, disability-wheelchair;
 @mixin icon student-services, hotel-single-bed-1;
