--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -254,6 +254,7 @@
 @include icon('standard', 'conversation-chat-text');
 @include icon('standard', 'dual-program');
 @include icon('standard', 'email-action-unread');
+@include icon('standard', 'expand-3');
 @include icon('standard', 'information-circle');
 @include icon('standard', 'navigation-menu');
 @include icon('standard', 'network-information');
@@ -265,6 +266,7 @@
 @include icon('standard', 'school-teacher-correct');
 @include icon('standard', 'search');
 @include icon('standard', 'settings-slider');
+@include icon('standard', 'shrink-2');
 @include icon('standard', 'subtract');
 @include icon('student-services', 'disability-wheelchair');
 @include icon('student-services', 'hotel-single-bed-1');
