--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -5,9 +5,11 @@
   background-color: $button-bg-color;
   border: 2px solid $button-border-color;
   border-radius: 5px;
+  box-sizing: border-box;
   color: $button-color;
   cursor: pointer;
   display: inline-block;
+  font-family: $button-font;
   font-size: 1rem;
   font-weight: normal;
   line-height: normal;
@@ -16,6 +18,10 @@
   text-align: center;
   text-decoration: none;
   transition: all 300ms ease-out;
+  
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
 
   &:hover, &:focus {
     background-color: $button-bg-hover-color;
