--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -181,11 +181,18 @@
                     margin: 0;
                     width: 100%;
                     padding: .75rem 1rem;
+                    border: 1px solid #e2e2e2;
                     border-radius: 2px;
                     font-size: 1rem;
                     line-height: 1;
                     color: #181818;
                     height: auto;
+                    outline: none;
+
+                    &:focus {
+                        border-color: core.$link;
+                        outline: none;
+                    }
                 }
 
                 &__button {
