Colour variables replaced, @use linking modified

--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,7 +1,7 @@
 @use '@uq-uidf/core/src/scss/global' as *;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use 'global' as *;
-@import "@uq-uidf/core/src/fonts/uq-icons/scss/mixins";
+@import '@uq-uidf/core/src/fonts/uq-icons/scss/mixins';
 
 // Accordion / Toggle style
 //
