--- a/packages/alert/src/scss/_global.scss
+++ b/packages/alert/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 $alert-default-bg-color: $uq-neutral-light40 !default; //EFEFEF !default;
 $alert-info-bg-color: #D4F0FF !default;
