--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // Variables, functions, and mixins
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *; 
+@use '@uq-uidf/core/src/scss/global' as *; 
 
 // Forms
 $form-required-color: $uq-red-dark20; //d6492a;
