--- a/packages/grid-menu/src/scss/_global.scss
+++ b/packages/grid-menu/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // Variables, functions, and mixins
-@use '@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use '@uq-uidf/foundation-block-grid/src/scss/global' as *;
 
@@ -7,6 +7,7 @@ $linked-list-color: $link-color;
 $linked-list-color-hover: $uq-white;
 $linked-list-desc: $uq-neutral-dark80; //222;
 $linked-list-desc-hover: $uq-white;
+$linked-list-border: $uq-neutral-light40; //EEE;
 
 // Two column layout.
 @mixin grid-menu-2-column {
