--- a/packages/main-menu/src/scss/_global.scss
+++ b/packages/main-menu/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use "../../node_modules/@uq-uidf/core/src/scss/_global" as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 $main-menu-color: $uq-black;
 $main-menu-bg-color: $uq-white;
