--- a/packages/pane/src/scss/_component.scss
+++ b/packages/pane/src/scss/_component.scss
@@ -1,6 +1,6 @@
-@use '@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
-@use "global" as *;
+@use 'global' as *;
 
 //
 // Panes: Blocks of colour with padding around content.
