--- a/packages/tabs/src/scss/_global.scss
+++ b/packages/tabs/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // Variables, functions, and mixins
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *; 
+@use '@uq-uidf/core/src/scss/global' as *; 
 
 $panel-border: $uq-neutral-light60; //e1e1e1;
 $active-color: $uq-yellow; //ffa200;
