--- a/packages/accordion/src/scss/_global.scss
+++ b/packages/accordion/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use "../../node_modules/@uq-uidf/core/src/scss/_global" as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 // Variables, functions, and mixins
 $accordion-border-color: $uq-neutral-light60; //e9e9e9;
