--- a/packages/body/src/scss/_global.scss
+++ b/packages/body/src/scss/_global.scss
@@ -1,5 +1,5 @@
 // Variables, functions, and mixins
-@use "../../node_modules/@uq-uidf/core/src/scss/global" as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 // Headings
 $h1-font-size: 2.438rem;
