--- a/packages/breadcrumb/src/scss/_global.scss
+++ b/packages/breadcrumb/src/scss/_global.scss
@@ -1,3 +1,3 @@
-@use "../../node_modules/@uq-uidf/core/src/scss/global" as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 $breadcrumb-link: $uq-neutral-dark60;
