--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -1,8 +1,8 @@
-@use "@uq-uidf/core/src/scss/global" as *;
-@use "@uq-uidf/foundation-global/src/scss/global" as *;
-@use "@uq-uidf/foundation-grid/src/scss/global" as *;
-@use "global" as *;
-@import "font-awesome/scss/mixins";
+@use '@uq-uidf/core/src/scss/global' as *;
+@use '@uq-uidf/foundation-global/src/scss/global' as *;
+@use '@uq-uidf/foundation-grid/src/scss/global' as *;
+@use 'global' as *;
+@import 'font-awesome/scss/mixins';
 
 // Cards
 // Used in the Card Grid component.
