--- a/packages/lists/src/scss/_global.scss
+++ b/packages/lists/src/scss/_global.scss
@@ -1,4 +1,4 @@
-@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 
 $h3-font-size: 1.438rem;
 $pane-shaded-bg: $uq-neutral-light20; //f5f5f5;
