--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -1,4 +1,4 @@
-@use "@uq-uidf/core/src/scss/global" as *;
+@use '@uq-uidf/core/src/scss/global' as *;
 @use '@uq-uidf/foundation-global/src/scss/global' as *;
 @use 'global' as *;
 
@@ -6,7 +6,7 @@
 @import 'foundation-sites/scss/foundation/components/flex-video';
 
 @import 'font-awesome/scss/mixins';
-@import "@uq-uidf/core/src/fonts/uq-icons/scss/mixins";
+@import '@uq-uidf/core/src/fonts/uq-icons/scss/mixins';
 
 h1,
 h2,
