--- a/packages/icon/src/scss/_component.scss
+++ b/packages/icon/src/scss/_component.scss
@@ -257,6 +257,7 @@
 @include icon('standard', 'expand-3');
 @include icon('standard', 'information-circle');
 @include icon('standard', 'navigation-menu');
+@include icon('standard', 'navigation-next');
 @include icon('standard', 'network-information');
 @include icon('standard', 'network-user');
 @include icon('standard', 'phone');
