--- a/packages/storybook-html/src/components/main-navigation/main-navigation.html
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.html
@@ -31,7 +31,7 @@
         <div class="section__content">
           <nav class="nav nav--dropdown processed" id="primary-nav">
             <ul class="nav__level-1 nav--open" aria-expanded="true">
-              <li class="nav__has-subnav">
+              <li class="nav__has-subnav active">
                 <a
                   href="/study"
                   aria-expanded="false"
