--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -18,7 +18,7 @@
         text-decoration: none;
     }
     .acknowledgement-statement {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        border-bottom: 1px solid rgba($uq-white, 0.3);
         color: $site-footer-color;
         font-family: $merriweather;
         font-size: 1rem;
