--- a/packages/form/src/scss/_legacy.scss
+++ b/packages/form/src/scss/_legacy.scss
@@ -149,8 +149,8 @@ input:not([type]), input[type=text], input[type=password], input[type=date], inp
   border-style: solid;
   border-width: 1px;
   border-color: #cccccc;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  color: rgba(0, 0, 0, 0.75);
+  box-shadow: inset 0 1px 2px rgba($uq-black, 0.1);
+  color: rgba($uq-black, 0.75);
   display: block;
   font-family: inherit;
   font-size: 0.875rem;
@@ -293,7 +293,7 @@ select {
   border-style: solid;
   border-width: 1px;
   border-color: #cccccc;
-  color: rgba(0, 0, 0, 0.75);
+  color: rgba($uq-black, 0.75);
   font-family: inherit;
   font-size: 0.875rem;
   line-height: normal;
