--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -71,7 +71,7 @@
 			display: inline-block;
 			transform: translate(0, 0);
 			color: $uq-neutral;
-			font-size: 3rem;
+			width: 3rem;
 			position: absolute;
 			right: 0;
 			top: 0;
