SVG icon display issue sorted

--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -5,11 +5,14 @@
 
 .previous-next {
 	display: block;
+	width: 100vw; // Added as the storybook container that wraps the component is of less width. Will need to delete later
 
 	&__item {
-		display: inline-block;
 		width: 50%;
 		float: left;
+		@media (max-width: 575px) {
+			width: 100%;
+		}
 	}
 
 	&__item + &__item {
@@ -34,10 +37,10 @@
 			text-decoration: none;
 
 			&:before {
-				transform: translate(-10px, 0);
+				transform: translate(-10px, 0) rotateY(180deg);
 			}
 			&:after {
-				transform: translate(10px, 0);
+				transform: translate(10px, 0) rotateY(0deg);
 			}
 		}
 	}
@@ -48,16 +51,16 @@
 		float: left;
 
 		&:before {
-			content: url(../images/arrow-left-1.svg);
+			content: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 64.82 132.25'%3E%3Cpath d='M32.08,4.38,94.62,66.91a4.37,4.37,0,0,1,0,6.18h0L32.08,135.63' transform='translate(-31.58 -3.88)' fill='none' stroke='%23D7D1CC' stroke-linecap='round' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 			display: inline-block;
-			transform: translate(0, 0);
+			transform: translate(0, 0) rotateY(180deg);
 			color: $uq-neutral;
 			width: 3rem;
 			position: absolute;
 			left: 0;
 			top: 0;
 			transition: all ease .2s;
-		}
+		} 
 	}
 
 	&__link-next {
@@ -67,9 +70,9 @@
 		float: right;
 
 		&:after {
-			content: url(../images/arrow-right-1.svg);
+			content: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 64.82 132.25'%3E%3Cpath d='M32.08,4.38,94.62,66.91a4.37,4.37,0,0,1,0,6.18h0L32.08,135.63' transform='translate(-31.58 -3.88)' height='100%' fill='none' stroke='%23D7D1CC' stroke-linecap='round' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
 			display: inline-block;
-			transform: translate(0, 0);
+			transform: translate(0, 0) rotateY(0deg);
 			color: $uq-neutral;
 			width: 3rem;
 			position: absolute;
