Added story + prev-next instances

--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -13,6 +13,9 @@
 		@media (max-width: 640px) {
 			width: 100%;
 		}
+		&--hidden {
+			visibility: hidden;
+		}
 	}
 
 	&__item + &__item {
@@ -88,5 +91,4 @@
 		font-style: italic;
 		font-weight: 300;
 	}
-
 }
