updated missing core. refs

--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -33,7 +33,7 @@
     }
 
     .acknowledgement-statement {
-        border-bottom: 1px solid rgba($uq-white, 0.3);
+        border-bottom: 1px solid rgba(core.$uq-white, 0.3);
         color: $site-footer-color;
         font-family: core.$merriweather;
         font-size: 1rem;
