--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -94,7 +94,7 @@
                 }
 
                 a {
-                    color: $uq-white;
+                    color: core.$uq-white;
                     font-size: .875rem;
                     font-weight: 300;
                     text-decoration: none;
@@ -134,7 +134,7 @@
             }
 
             &__title {
-                color: $uq-white;
+                color: core.$uq-white;
                 font-family: core.$merriweather;
                 font-size: 1.25rem;
                 font-style: italic;
@@ -163,7 +163,7 @@
                         vertical-align: middle;
                     }
                     & label {
-                        color: $uq-white;
+                        color: core.$uq-white;
                         display: inline;
                         font-size: .875rem;
                     }
@@ -177,7 +177,7 @@
                     max-width: 100%;
                     min-width: 100%;
                     border-radius: 2px;
-                    background-color: $uq-white;
+                    background-color: core.$uq-white;
                     background-position: 1rem;
                 }
 
@@ -190,7 +190,7 @@
                     border-radius: 2px;
                     font-size: 1rem;
                     line-height: 1;
-                    color: $uq-neutral-dark80; //#181818
+                    color: core.$uq-neutral-dark80; //#181818
                     height: auto;
                     outline: none;
 
@@ -267,7 +267,7 @@
     }
 
     &__secondary {
-        background-color: $uq-white;
+        background-color: core.$uq-white;
         padding-top: 1.5rem;
         padding-bottom: .5rem;
 
