--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -3,8 +3,6 @@
 @use 'global' as *;
 
 .previous-next {
-	display: block;
-	width: 100vw; // Added as the storybook parent container that wraps the component is of less width. Will need to delete later
 
 	&__item {
 		width: 50%;
@@ -54,6 +52,7 @@
 
 		&:before {
 			content: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 64.82 132.25'%3E%3Cpath d='M32.08,4.38,94.62,66.91a4.37,4.37,0,0,1,0,6.18h0L32.08,135.63' transform='translate(-31.58 -3.88)' fill='none' stroke='%23D7D1CC' stroke-linecap='round' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+			// SVG used is Streamline - Regular - arrow-right-1.svg
 			width: 3rem;
 			display: inline-block;
 			position: absolute;
@@ -72,6 +71,7 @@
 
 		&:after {
 			content: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 64.82 132.25'%3E%3Cpath d='M32.08,4.38,94.62,66.91a4.37,4.37,0,0,1,0,6.18h0L32.08,135.63' transform='translate(-31.58 -3.88)' height='100%' fill='none' stroke='%23D7D1CC' stroke-linecap='round' stroke-width='3' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+			// SVG used is Streamline - Regular - arrow-right-1.svg
 			width: 3rem;
 			display: inline-block;
 			position: absolute;
