Prefixed with 'uq-'

--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -2,7 +2,7 @@
 @use '@uq-uidf/core/src/scss/global' as *;
 @use 'global' as *;
 
-.previous-next {
+.uq-previous-next {
 
 	&__item {
 		width: 50%;
