--- a/packages/storybook-html/src/components/previous-next/previous-next.html
+++ b/packages/storybook-html/src/components/previous-next/previous-next.html
@@ -1,9 +1,9 @@
-<div class="previous-next">
-    <div class="previous-next__item">
-        <a href="#" class="previous-next__link-previous">Enrolment basics <span class="previous-next__description">Previous</span></a>
+<div class="uq-previous-next">
+    <div class="uq-previous-next__item">
+        <a href="#" class="uq-previous-next__link-previous">Enrolment basics <span class="uq-previous-next__description">Previous</span></a>
     </div>
 
-    <div class="previous-next__item">
-        <a href="#" class="previous-next__link-next">How to enrol <span class="previous-next__description">Next</span></a>
+    <div class="uq-previous-next__item">
+        <a href="#" class="uq-previous-next__link-next">How to enrol <span class="uq-previous-next__description">Next</span></a>
     </div>
 </div>
