--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -32,7 +32,7 @@
         border-bottom: 1px dotted;
     }
 
-    .acknowledgement-statement {
+    &__acknowledgement-statement {
         border-bottom: 1px solid rgba(core.$uq-white, 0.3);
         color: $site-footer-color;
         font-family: core.$merriweather;
