storybook-html, private-design-output: update main navigation examples

--- a/packages/storybook-html/src/components/main-navigation/main-navigation.html
+++ b/packages/storybook-html/src/components/main-navigation/main-navigation.html
@@ -1,18 +1,18 @@
 <!-- Site title and mobile nav toggler -->
-<div class="main-navigation-header">
+<div class="uq-main-navigation-header">
   <div class="section__content">
-    <div class="main-navigation-header__title-container">
-      <a href="/" class="main-navigation-header__title">Site title</a>
+    <div class="uq-main-navigation-header__title-container">
+      <a href="/" class="uq-main-navigation-header__title">Site title</a>
     </div>
-    <div class="main-navigation-header__actions">
+    <div class="uq-main-navigation-header__actions">
       <div>[Site utilities go here]</div>
-      <button class="main-navigation-header__nav-toggle js-nav-toggle">Menu</button>
+      <button class="uq-main-navigation-header__nav-toggle js-nav-toggle">Menu</button>
     </div>
   </div>
 </div>
 
 <!-- Navigation Menu  -->
-<div class="main-navigation">
+<div class="uq-main-navigation">
   <div id="block-mainnavigation" class="block block-system block-system-menu-blockmain">
     <div>
       <div class="section__content">
