--- a/packages/storybook-html/src/components/header/header_no-local-search.html
+++ b/packages/storybook-html/src/components/header/header_no-local-search.html
@@ -29,22 +29,7 @@
                         <span class="nav-search__title">What are you looking for?</span>
                     </legend>
                     <span class="nav-search__title">What are you looking for?</span>
-                    <div class="nav-search__scope">
-                        <div class="nav-search__scope__radio-wrapper">
-                            <div class="form-item">
-                                <input type="radio" id="global-site-search" name="site-search-scope" value="" class="form-radio">
-                                <label for="global-site-search" class="option">
-                                    Search all UQ websites
-                                </label>
-                            </div>
-                            <div class="form-item">
-                                <input type="radio" id="local-site-search" name="site-search-scope" value="https://xyz.uq.edu.au/" checked="checked" class="form-radio">
-                                <label for="local-site-search" class="option">
-                                    Search this website (xyz.uq.edu.au)
-                                </label>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="nav-search__scope">Search all UQ websites</div>
                 </fieldset>
                 <div class="nav-search__query">
                     <span class="search-query__wrapper">
