header: change scope region text colour to $uq-white

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -146,7 +146,7 @@
             }
 
             &__scope {
-                color: rgba(core.$uq-white, .6);
+                color: core.$uq-white;
                 font-size: .75rem;
 
                 &__radio-wrapper {
