main-navigation: change package name to site-header, and refactor

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -22,7 +22,7 @@
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'header/src/scss/component' as header;
 @use 'lists/src/scss/component' as lists;
-@use 'main-navigation/src/scss/component' as main-navigation;
 @use 'pane/src/scss/component' as pane;
 @use 'sections/src/scss/component' as sections;
+@use 'site-header/src/scss/component' as site-header;
 @use 'tabs/src/scss/component' as tabs;
